--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -6,7 +6,8 @@ author:
 thanks: "Code and data are available at: LINK."
 date: "`r format(Sys.time(), '%d %B %Y')`"
 abstract: "First sentence. Second sentence. Third sentence. Fourth sentence."
-output:
+keywords: ""
+output: 
   bookdown::pdf_document2
 toc: FALSE
 bibliography: references.bib
