--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -1,12 +1,9 @@
 ---
-title: "My title"
-subtitle: "My subtitle if needed"
-author: 
-  - Ayoon Kim 
-thanks: "Code and data are available at: LINK."
+title: "Toronto Homicide Occurrences"
+author: "Ayoon Kim"
+thanks: "Code and data are available at: https://github.com/19akim/Final_paper.git"
 date: "27 April 2022"
-abstract: "First sentence. Second sentence. Third sentence. Fourth sentence."
-keywords: ""
+abstract: "This report presents an analysis of the City of Toronto's data on homicide occurrences. The results indicate that education, income, and living environment has an affect on homicide occurrences. In order to perform an analysis of the relationship between Toronto's homicide occurrences and such external factors, the statistical programming language R is used. The results contribute to our understanding of the issue, enabling to identify patterns to Toronto's homicide occurrences."
 output: 
   bookdown::pdf_document2
 toc: FALSE
@@ -17,60 +14,32 @@ bibliography: references.bib
 knitr::opts_chunk$set(echo = TRUE)
 
 library(tidyverse)
-library(palmerpenguins)
+
 ```
 
 # Introduction
 
-You can and should cross-reference sections and sub-sections. For instance, Section \@ref(data). R Markdown automatically makes the sections lower case and adds a dash to spaces to generate labels, for instance, Section \@ref(first-discussion-point). 
+Only heavy crimes such as first degree murder, second degree murder, infanticide or manslaughter are considered homicide. The definition of homicide is usually consistent across nations. Hence, compared to any other crimes, homicide has more international consensus on the meaning and nature of homicide. Therefore, it is important to examine homicide since it is considered as a "comparable and reliable barometer of violence in society". 
+
+As severe as it is, homicide is relatively rare in Canada compared to other countries, but in recent years, Canada's homicide rate has been higher. However, due to COVID-19, there has been stay-at-home measures and encouraged "physical distancing". This caused people to spend more time at home and caused businesses to close temporarily or adapt to different methods of services. These changes in society and economy has led to a shift in crime patterns across Canada. This report will help identify such shifts in crime patterns in Toronto and the different motivational factors that could lead to homicide. 
+
+```{r codeimportdata, include = FALSE, echo=FALSE, message=FALSE, warning=FALSE}
 
 
+```
 
 # Data
 
-Our data is of penguins (Figure \@ref(fig:bills)).
-
-```{r bills, fig.cap="Bills of penguins", echo = FALSE}
-ggplot(penguins, aes(x = island, fill = species)) +
-  geom_bar(alpha = 0.8) +
-  scale_fill_manual(values = c("darkorange","purple","cyan4"),
-                    guide = FALSE) +
-  theme_minimal() +
-  facet_wrap(~species, ncol = 1) +
-  coord_flip()
-```
-
-Talk more about it.
-
-Also bills and their average (Figure \@ref(fig:billssssss)). (Notice how you can change the height and width so they don't take the whole page?)
-
 ```{r billssssss, fig.cap="More bills of penguins", echo = FALSE, fig.width=8, fig.height=4}
 
-# This needs to be about the random data tha tI sasmpled?
-ggplot(penguins, aes(x = island, fill = species)) +
-  geom_bar(alpha = 0.8) +
-  scale_fill_manual(values = c("darkorange","purple","cyan4"),
-                    guide = FALSE) +
-  theme_minimal() +
-  facet_wrap(~species, ncol = 1) +
-  coord_flip()
+
 ```
 
-Talk way more about it. 
+
 
 
 
 # Model
-
-\begin{equation}
-Pr(\theta | y) = \frac{Pr(y | \theta) Pr(\theta)}{Pr(y)}  (\#eq:bayes)
-\end{equation}
-
-Equation \@ref(eq:bayes) seems useful, eh?
-
-Here's a dumb example of how to use some references: In paper we run our analysis in `R` [@citeR]. We also use the `tidyverse` which was written by @thereferencecanbewhatever If we were interested in baseball data then @citeLahman could be useful. 
-
-We can use maths by including latex between dollar signs, for instance $\theta$.
 
 
 # Results
@@ -79,7 +48,7 @@ We can use maths by including latex between dollar signs, for instance $\theta$.
 
 ## First discussion point
 
-If my paper were 10 pages, then should be be at least 2.5 pages. The discussion is a chance to show off what you know and what you learnt from all this. 
+
 
 ## Second discussion point
 
@@ -87,7 +56,7 @@ If my paper were 10 pages, then should be be at least 2.5 pages. The discussion 
 
 ## Weaknesses and next steps
 
-Weaknesses and next steps should also be included.
+
 
 \newpage
 
